--- a/markup/player-pause.html
+++ b/markup/player-pause.html
@@ -54,6 +54,10 @@
             <svg viewBox="0 0 14 21" width="14" height="21">
               <use xlink:href="#pause"></use>
             </svg>
+            
+            <svg viewBox="0 0 14 21" width={14} height={21}>
+              <use xlinkHref="#pause" />
+            </svg>
             <span>Pause</span>
           </button>
           <div class="player__name">Transpotting</div>
