--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/main.min.css">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
 <body>
@@ -44,6 +45,9 @@
             <polygon id="Line" fill="#EEE5B5" fill-rule="nonzero"
               points="10 -1.11910481e-13 14 -1.11910481e-13 14 21 10 21" />
           </g>
+        </symbol>
+        <symbol id="play-s" viewBox="0 0 19 19">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0L19 9.5L0 19V0Z" fill="#EEE5B5"/>
         </symbol>
       </svg><!-- endinject -->
     </div>
